--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div id="toschedule">
                 <p>To Schedule your time, please input a date before proceeding to
-                    the <a href="plan/schedule.html">Schedule<a> page
+                    the <a href="plan/schedule.html">Schedule</a> page
                 </p>
                 <div style="display:flex;
                 border:1px solid #004AAD">
