--- a/plan/schedule.html
+++ b/plan/schedule.html
@@ -11,21 +11,8 @@
 <body onload="ifsigned()">
     <div class="header">
         <div class ="banner">
-            <button id="signbutton" class="signin" onclick="window.location.href='#popup-box'; identify()">SIGN IN</button>
+            <button id="signbutton" class="signin"></button>
             <div id="popup-box" class="modal">
-                <div class="boxes">
-                    <h2 style="color: #004AAD;">Sign In Here!</h2>
-                    <div class="emailsign">
-                        <h3>Email:</h3>
-                        <input type="text" id="username" onfocus="this.value=''">
-                    </div>
-                    <div class="passsign">
-                        <h3>Password:</h3>
-                        <input type="Password" id="password" onfocus="this.value=''">
-                    </div>
-                    <button class="signin" type="button" onclick="getInfo()">Sign In</button> 
-                    <a href="#"class="box-close">×</a>
-                </div>
             </div>
         </div>
         <img class="picture" src="../images/tenn.png" alt="a map of the Tennis Center">
